[package]
name = "dmxtools"
description = "Some desktop-envrionment-type tools that use dmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "^1.0"
dm_x = { git = "https://github.com/d2718/dmx-rs", branch = "master", features = ["config"] }
libc = "^0.2"
once_cell = "^1.12"
regex = "^1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "^0.5"